@media.queries adjustment (fixed overlapping white border)

--- a/public/styles.css
+++ b/public/styles.css
@@ -3,8 +3,6 @@
     margin: 0;
 }
 
-/* for main colour background: #c56183; */
-
 .header {
     background: #fcdada;
     padding-top: 10px;
@@ -60,8 +58,9 @@ footer {
     left: 0;
     bottom: 0;
     width: 100%;
-    /* position: static; */
+    position: relative;
     background: #fcdada;
+    overflow: hidden;
     height: 75px;
 }
 
@@ -75,6 +74,7 @@ footer {
     padding-top: 1px;
 }
 
+
 .main-section {
     position: relative;
     height: 500px;
@@ -87,21 +87,25 @@ footer {
     position: relative;
     width: 100%;
     /* height: 500px; */
-    background: #fff5ea;
+    background: #fff0f0;
     text-align: center;
     /* border-radius: -5% -5% 5% 5%; */
 }
 
 .why-image {
-    width: 100%;
-    /* margin-bottom: 25px; */
-    /* border-radius: 5% 5% 5% 5%; */
-    /* box-shadow: 10px 10px 5px grey; */
+    width: 90%;
+    min-width: 700px;
+    /* margin-left: 60px; */
+    margin-bottom: 25px;
+    margin-top: 25px;
+    border-radius: 5% 5% 5% 5%; 
+    box-shadow: 10px 10px 5px grey;
 }
 
 @media screen and (max-width: 790px) {
     .why-image {
         width: 450px;
+        min-width: auto;
         margin-top: 50px;
     }
   }
@@ -118,6 +122,7 @@ footer {
 .why-p {
     font-family: 'Open Sans', sans-serif;
     width: 80%;
+    /* min-width: 620px; */
     /* max-width: 100%; */
     margin-right: auto;
     margin-left: auto;
@@ -127,6 +132,16 @@ footer {
     /* padding-top: 25px; */
     padding-bottom: 25px;
 }
+
+@media screen and (max-width: 790px) {
+        .why-image {
+            width: 450px;
+            min-width: auto;
+            margin-top: 50px;
+        }
+      }
+
+
 
 .dec-img {
     width: 100px;
@@ -143,7 +158,7 @@ footer {
     padding-top: 170px;
     padding-bottom: 50px;
     font-weight: 700;
-    font-size: 50px;
+    font-size: 60px;
     width: 100%;
     font-family: 'Open Sans', sans-serif;
     text-align: center;
@@ -153,15 +168,26 @@ footer {
 
 .main-p {
     position: relative;
-    font-size: 20px;
-    font-weight: 600;
+    font-size: 35px;
+    /* font-weight: 600; */
     z-index: 3;
     padding-top: 250px;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Niconne', cursive;
+    /* font-family: 'Open Sans', sans-serif; */
     text-align: center;
     font-style: italic;
     color: white;
 }
+
+@media screen and (max-width: 790px) {
+    .main-t {
+        font-size: 45px;
+    }
+
+    .main-p {
+        font-size: 25px;
+    }
+  }
 
 img.needle-logo {
     position: relative;
@@ -173,4 +199,13 @@ img.needle-logo {
     margin-right: auto;
     opacity: 1;
 
+}
+
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
 }
